# rockpaperscissor.c

./: .gitignore  CMakeLists.txt  README.org
example/: CMakeLists.txt  main.c
include/: CMakeLists.txt  rockpaperscissor.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  rockpaperscissor.c
test/: CMakeLists.txt  rockpaperscissor.c
